[package]
name = "bitcoin-codecs"
version = "0.1.0"
authors = ["Nick Johnson <nick@yonson.dev>"]
edition = "2021"
rust-version = "1.63.0"
license = "CC0-1.0"
description = "Push-based bitcoin protocol codecs"
repository = "https://github.com/njohnson/bitcoin-codecs"
keywords = ["bitcoin", "codec", "protocol", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
push_decode = { version = "0.4", default-features = false, features = ["std"] }
either = "1"

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
push_decode = { version = "0.4", features = ["tokio"] }
